--- a/Proyectos/Clases/views/profile.handlebars
+++ b/Proyectos/Clases/views/profile.handlebars
@@ -8,6 +8,7 @@
     <p>Nombre: {{user.first_name}} {{user.last_name}}</p>
     <p>Correo electrónico: {{user.email}}</p>
     <p>Edad: {{user.age}}</p>
+    <p>Rol: {{user.rol}}</p>
     <a href="/logout">Cerrar Sesión</a>
 </body>
 </html>
